# mc

./: .gitignore  .pylintrc  README.md  demo.ipynb  setup.cfg
.github/workflows/: api-doc.yml  api-doc.yml.bak  doc-pdf.yml  draft-pdf.yml
.history/src/mc/: distributions_20220930165146.py
doc/: api.tex  bibliography.bib
jose/: paper.md
joss/: bibliography.bib
src/: distributions.py  setup.py  test.ipynb
src/mc/: __init__.py  _mcbase.py  distributions.py  experiments.py  mcbase.py  samplings.py  test.py
src/mc/data/: AAPL.csv  MSFT.csv
src/mc/distributions/: Benford.py  Student.py  __init__.py  _benford.py  _binom.py  _chisq.py  _exponential.py  _f.py  _poisson.py  _student.py  _zipf.py
src/mc/experiments/: Galton_Board.py  Paper_Clips.py  Parcel.py  Parcel_V2.py  Pi.py  Pi_Illustrate.py  Prisoners.py  Prisoners_Limit.py  Sudden_Death.py  __init__.py  _dices.py  _galton_board.py  _paper_clips.py  _parcel.py  _pi.py  _prisoners.py  _sudden_death.py
src/mc/gui/: __init__.py
src/mc/samplings/: Anova.py  Bartlett_Sphericity_Test.py  Bartlett_Test.py  Chisq_Gof_Test.py  Cochrane_Q_Test.py  Fk_Test.py  Hotelling_T2_Test.py  Kw_Stat.py  Kw_Test.py  Levene_Stat.py  Levene_Test.py  Median_Stat.py  Median_Test.py  Sign_Test.py  T_Test.py  __init__.py  _anova.py  _bartlett_sphericity_test.py  _bartlett_test.py  _chisq_gof_test.py  _clt.py  _cochrane_q_test.py  _fk_test.py  _hotelling_t2_test.py  _kw_test.py  _levene_test.py  _median_test.py  _sign_test.py  _t_test.py
