[metadata]
name = mc-tk
version = 0.0.4
author = Yinsheng Zhang (Ph.D.)
author_email = oo@zju.edu.cn
description = A Monte-Carlo toolkit for educational purposes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhangys11/mc
project_urls =
    Bug Tracker = https://github.com/zhangys11/mc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =    
    matplotlib
    numpy
    scipy
    statsmodels

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.csv